# wasm-crc32-example

./: .gitignore  Cargo.toml  README.md  browser.js  crc32.js  index.html  index.js  js-bench.js  package.json  webpack.config.js
fixture/: test.txt
src/: lib-shrinked.rs  lib.rs
